# balloon-lang

./: .editorconfig  .gitignore  .travis.yml  CONTRIBUTING.md  Cargo.toml  README.md  build.rs  lint.sh  rustfmt.toml
lib/: prelude.ll
random-test-files/: test-2.bl  test-3.bl  test-4.bl  test-5.bl
src/: ast.rs  ast_walk_interpreter.rs  builtins.rs  checker.rs  environment.rs  error.rs  function.rs  grammar.rustpeg  interpreter.rs  interpreter_test.rs  llvm_interpreter.rs  main.rs  operations.rs  repl.rs  runtime.rs  typechecker.rs  typechecker.rs.bk  typechecker_test.rs  value.rs
tests/: 002-multiple-simple-assignment.bl  003-single-expr-assignment.bl  004-multiple-expr-assignment.bl  005-identifier-in-expression.bl  006-expr-with-parens.bl  007-bools.bl  008-comparisons.bl  009-if-statement.bl  010-if-else-statement.bl  011-equals.bl
tests/errors/: 001-lhs-ref-error.bl  003-block-scope.bl  003-incompatible-addition.bl
tests/run-fail/: arg-len.bl  arg-len.err  assert-eq-unequal.bl  assert-eq-unequal.err  assert-false.err  break-outside-loop.bl  break-outside-loop.err  break-return-outside.bl  break-return-outside.err  call-non-function.bl  call-non-function.err  continue-outside-loop.bl  continue-outside-loop.err  index-out-of-bounds.bl  index-out-of-bounds.err  non-integral-num-subscript.bl  non-integral-num-subscript.err  none-error.bl  none-error.err  subscript-on-non-subcriptable.bl  subscript-on-non-subcriptable.err
tests/run-pass/: arithmetic.bl  basic-bindings.bl  block-env.bl  bool-cast.bl  closures.bl  comments.bl  comparisons.bl  compound-assign.bl  (+23 more)
(+47 files in other folders)
